https://recolnat.atlassian.net/browse/AO-27: Library ergonomy improvements: import button,fix for dropdown menu alignment

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1055,7 +1055,7 @@ div.leaflet-marker-icon {
 }
 
 .import-menu {
-margin-left: 0px;
+    margin-left: 0px;
     z-index: 10000;
     border: 1px solid #cbcaca;
     padding: 0px 5px 0px 10px;
@@ -1075,6 +1075,10 @@ margin-left: 0px;
     color: #999999;
     cursor: pointer;
   }
+  .dropdown-menu {
+    top: 2px !important;
+    left: -10px !important;
+  }
   .dropdown-item {
     padding: 0px;
     .import-menu-item {
@@ -1082,6 +1086,7 @@ margin-left: 0px;
       margin-right: 5px;
     }
   }
+
 }
 
 .visible {
